@@ -16,6 +16,7 @@ wxAlignment             T_ENUM
 
 wxDataViewCtrl *        O_WXOBJECT
 wxDataViewTreeCtrl *    O_WXOBJECT
+wxDataViewListCtrl *    O_WXOBJECT
 wxDataViewColumn *      O_NON_WXOBJECT_THR
 const wxDataViewColumn * O_NON_WXOBJECT
 wxDataViewModel *       O_NON_WXOBJECT
@@ -37,3 +38,11 @@ wxDataViewBitmapRenderer * O_WXOBJECT_THR
 wxDataViewDateRenderer * O_WXOBJECT_THR
 wxDataViewSpinRenderer * O_WXOBJECT_THR
 wxDataViewIconText*      O_NON_WXOBJECT
+wxDataViewListStore *    O_NON_WXOBJECT
+const wxDataViewListStore * O_NON_WXOBJECT
+wxVectorVariant          T_VECTORVARIANT
+
+INPUT
+T_VECTORVARIANT
+    wxPli_av_2_thingarray( aTHX_ $arg, & $var, wxPli_convert_variant(),
+                           wxPli_vector_allocator<wxVector<wxVariant>, wxVariant>( & $var ) );
